Updated unix scripts