@@ -1,10 +1,9 @@
-#!/bin/bash
+!/bin/bash
 
 APP_HOME=/apps/MB
-VERSION=parent-social-1.0-SNAPSHOT
+INSTALL_PATH=$APP_HOME/parent-social-1.0-SNAPSHOT
 
-INSTALL_PATH=$APP_HOME/$VERSION
 cd $INSTALL_PATH
 
 echo "Starting play"
-nohup ./start -Dhttp.port=80 -Dconfig.file=/opt/conf/mb_prod.conf &
+nohup ./start -Xmx768m -XX:MaxPermSize=128m -Dhttp.port=80 -Dconfig.file=/opt/conf/mb_prod.conf &
